--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "npm start --prefix ../client",
-    "dev": "concurrently \"npm run start\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
